tooling/jenkins/jenkins.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
  labels:
    app: jenkins-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins-app
    spec:
      volumes:
      - name: jenkins-pv-claim
        persistentVolumeClaim:
          claimName: jenkins-pv-claim
      containers:
      - name: jenkins
        image: "jenkinsci/jenkins:latest"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: jenkins-pv-claim
          mountPath: "/var/jenkins_home"
      securityContext:
        fsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins-app
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: jenkins-port
  type: ClusterIP
