tooling/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
  - host: jenkins.equibit-dev.us-east.containers.mybluemix.net
    http:
      paths:
      - backend:
          serviceName: jenkins-service
          servicePort: 80
